--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				<div> <p><a href="https://scholar.google.com/citations?user=oeJMbRYAAAAJ&hl=en">Google scholar</a><br> </div>
 				<div> <p><a href="https://orcid.org/0009-0000-0968-219X">ORCiD</a><br> </div>
 				<div> <p><a href="https://www4.comp.polyu.edu.hk/~csrchang/">Old homepage</a><br> </div>
+		    		<div> <p><a href="rocky_cv.pdf">CV</a>a><br> </div>
             </div>
 			
             <!-- Entries Column -->
