--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <html lang="en">
 <head>
+  <title>Rocky K. C. Chang</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -14,7 +15,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
   <link rel="icon" type="image/png" href="favicon-32x32.png">
-  <title>Rocky K. C. Chang</title>
 </head>
 <body>
 
@@ -50,7 +50,7 @@
             <!-- Entries Column -->
             <div class="col-md-8 col-xs-12">
                 <div class="col" style="margin-top:3%; text-align:justify;">                
-                    <p>Rocky Chang is a professor of <a href="https://calvin.edu/academics/school-stem/computer-science">Computer Science</a> at <a href="https://calvin.edu/">Calvin University</a>. Before joining Calvin in August 2023, he taught in the <a href="https://www.polyu.edu.hk/en/comp/">Department of Computing</a> of the <a href="https://www.polyu.edu.hk/">Hong Kong Polytechnic University (PolyU)</a> for more than 26 years and in the <a href="https://iceweb.cycu.edu.tw/">Department of Information and Computer Engineering</a> of <a href="https://eng.cycu.edu.tw/">Chung Yuan Christian University (CYCU)</a> in Taiwan for more than 3 years. A <a href="https://calvin.edu/stories/visit-campus-turns-parent-professor">story</a> of why joining Calvin after spending 30 years in Asia. He was a Key Technology Partner Visiting Fellow at University of Technology/Sydney. He did his post-doc at the <a href="https://research.ibm.com/labs/yorktown-heights">IBM T. J. Watson Research Center</a>.
+                    <p>Test Rocky Chang is a professor of <a href="https://calvin.edu/academics/school-stem/computer-science">Computer Science</a> at <a href="https://calvin.edu/">Calvin University</a>. Before joining Calvin in August 2023, he taught in the <a href="https://www.polyu.edu.hk/en/comp/">Department of Computing</a> of the <a href="https://www.polyu.edu.hk/">Hong Kong Polytechnic University (PolyU)</a> for more than 26 years and in the <a href="https://iceweb.cycu.edu.tw/">Department of Information and Computer Engineering</a> of <a href="https://eng.cycu.edu.tw/">Chung Yuan Christian University (CYCU)</a> in Taiwan for more than 3 years. A <a href="https://calvin.edu/stories/visit-campus-turns-parent-professor">story</a> of why joining Calvin after spending 30 years in Asia. He was a Key Technology Partner Visiting Fellow at University of Technology/Sydney. He did his post-doc at the <a href="https://research.ibm.com/labs/yorktown-heights">IBM T. J. Watson Research Center</a>.
 
 				<p>Rocky has accumulated over 30 years of teaching experience at all levels and taught sujects like Computational Thinking and Program Design, (Advanced) Computer Networking, Internet Infrastructure Security and Engineering Ethics. At Calvin, it is his first time of learning how to integrate Christian Reformed faith in his teaching. Virtually everything he does inside and outside classroom and lab is a part of his and their spiritual formation, whether problem solving using God-given faculty of reasoning and logic or engaging with his students casually in the dinning hall.</p>
 					
